--- a/login.html
+++ b/login.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login | Cielis</title>
+  <meta name="description" content="Meet Cielis, and have some fun betting on random events">
   <link rel="icon" href="assets/cielis.svg" type="image/svg+xml">
   <link rel="stylesheet" href="styles/base.css">
   <link rel="stylesheet" href="styles/ui/input.css">
