--- a/login.html
+++ b/login.html
@@ -4,13 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login | Cielis</title>
-  <meta name="description" content="Meet Cielis, and have some fun betting on random events">
-  <link rel="icon" href="assets/cielis.svg" type="image/svg+xml">
-  <link rel="stylesheet" href="styles/base.css">
-  <link rel="stylesheet" href="styles/ui/input.css">
-  <link rel="stylesheet" href="styles/ui/form.css">
-  <link rel="stylesheet" href="styles/ui/button.css">
-  <link rel="stylesheet" href="styles/login.css">
+  <meta name="description" content="Meet Cielis, and have some fun betting on random events.">
+  <link rel="icon" href="/assets/cielis.svg" type="image/svg+xml">
+  <link rel="stylesheet" href="/styles/base.css">
+  <link rel="stylesheet" href="/styles/ui/input.css">
+  <link rel="stylesheet" href="/styles/ui/form.css">
+  <link rel="stylesheet" href="/styles/ui/button.css">
+  <link rel="stylesheet" href="/styles/blocks/logo.css">
+  <link rel="stylesheet" href="/styles/login.css">
 </head>
 <body>
   <div class="logo">
@@ -42,6 +43,10 @@
       <button class="button">
         Login
       </button>
+
+      <p class="login__register-link">
+        Is it your first time here? <a href="/register.html">Create your account</a>.
+      </p>
     </form>
   </main>
 </body>
