add access control

--- a/public/login.html
+++ b/public/login.html
@@ -3,25 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login | Cielis</title>
-  <meta name="description" content="Meet Cielis, and have some fun betting on random events.">
-  <link rel="icon" href="/assets/cielis.svg" type="image/svg+xml">
-  <link rel="stylesheet" href="/styles/base.css">
-  <link rel="stylesheet" href="/styles/ui/input.css">
-  <link rel="stylesheet" href="/styles/ui/form.css">
-  <link rel="stylesheet" href="/styles/ui/button.css">
-  <link rel="stylesheet" href="/styles/blocks/logo.css">
-  <link rel="stylesheet" href="/styles/login.css">
+  <title>Login | SerasaBet</title>
+  <meta name="description" content="Meet SerasaBet and have some fun betting on random events.">
+  <link rel="icon" href="assets/logo.svg" type="image/svg+xml">
+  <link rel="stylesheet" href="styles/base.css">
+  <link rel="stylesheet" href="styles/ui/input.css">
+  <link rel="stylesheet" href="styles/ui/form.css">
+  <link rel="stylesheet" href="styles/ui/button.css">
+  <link rel="stylesheet" href="styles/login.css">
 </head>
 <body>
   <div class="logo">
-    <img aria-describedby="logo-text" src="assets/cielis.svg" />
-    <span id="logo-text" class="logo__text">Cielis</span>
+    <img aria-describedby="logo-text" src="assets/logo.svg" />
+    <span id="logo-text" class="logo__text">SerasaBet</span>
   </div>
 
   <main class="login">
     <div class="login__info">
-      <h1 class="login__title">Login to Cielis.</h1>
+      <h1 class="login__title">Login to SerasaBet.</h1>
 
       <h2 class="login__subtitle">
         Turn Predictions into Wins. Dive into the thrill of creating and betting
@@ -45,7 +44,7 @@
       </button>
 
       <p class="login__register-link">
-        Is it your first time here? <a href="/register.html">Create your account</a>.
+        Is it your first time here? <a href="/register">Create your account</a>.
       </p>
     </form>
   </main>
