--- a/public/register.html
+++ b/public/register.html
@@ -3,23 +3,21 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Register | Cielis</title>
-  <meta name="description" content="Meet Cielis, and have some fun betting on random events.">
-  <link rel="icon" href="/assets/cielis.svg" type="image/svg+xml">
+  <title>Register | SerasaBet</title>
+  <meta name="description" content="Meet SerasaBet and have some fun betting on random events.">
+  <link rel="icon" href="assets/logo.svg" type="image/svg+xml">
   <link rel="stylesheet" href="styles/base.css">
   <link rel="stylesheet" href="styles/ui/input.css">
   <link rel="stylesheet" href="styles/ui/form.css">
   <link rel="stylesheet" href="styles/ui/button.css">
-  <link rel="stylesheet" href="styles/blocks/logo.css">
   <link rel="stylesheet" href="styles/register.css">
-  <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
   <main class="register">
     <div class="register__left">
       <div class="register__left-inner">
         <div class="register__info">
-          <h1 class="register__title">Welcome to Cielis!</h1>
+          <h1 class="register__title">Welcome to SerasaBet!</h1>
     
           <h2 class="register__subtitle">
             Have some fun betting on random events.
@@ -52,13 +50,15 @@
           </button>
         </form>
 
-        <p class="login-link"></p>
+        <p class="register__login-link">
+          Already have an account? <a href="register.html">Login</a>.
+        </p>
       </div>
     </div>
 
     <div class="register__right"></div>
   </main>
 
-  <script src="/scripts/register.js"></script>
+  <script src="scripts/register.js"></script>
 </body>
 </html>
