refactor: refactor server and files

--- a/pages/login.html
+++ b/pages/login.html
@@ -5,16 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login | SerasaBet</title>
   <meta name="description" content="Meet SerasaBet and have some fun betting on random events.">
-  <link rel="icon" href="assets/logo.svg" type="image/svg+xml">
-  <link rel="stylesheet" href="styles/base.css">
-  <link rel="stylesheet" href="styles/ui/input.css">
-  <link rel="stylesheet" href="styles/ui/form.css">
-  <link rel="stylesheet" href="styles/ui/button.css">
-  <link rel="stylesheet" href="styles/login.css">
+  <link rel="icon" href="/static/assets/logo.svg" type="image/svg+xml">
+  <link rel="stylesheet" href="/static/styles/base.css">
+  <link rel="stylesheet" href="/static/styles/ui/input.css">
+  <link rel="stylesheet" href="/static/styles/ui/form.css">
+  <link rel="stylesheet" href="/static/styles/ui/button.css">
+  <link rel="stylesheet" href="/static/styles/login.css">
 </head>
 <body>
   <div class="logo">
-    <img aria-describedby="logo-text" src="assets/logo.svg" />
+    <img aria-describedby="logo-text" src="/static/assets/logo.svg" />
     <span id="logo-text" class="logo__text">SerasaBet</span>
   </div>
 
