--- a/pages/register.html
+++ b/pages/register.html
@@ -5,12 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Register | SerasaBet</title>
   <meta name="description" content="Meet SerasaBet and have some fun betting on random events.">
-  <link rel="icon" href="assets/logo.svg" type="image/svg+xml">
-  <link rel="stylesheet" href="styles/base.css">
-  <link rel="stylesheet" href="styles/ui/input.css">
-  <link rel="stylesheet" href="styles/ui/form.css">
-  <link rel="stylesheet" href="styles/ui/button.css">
-  <link rel="stylesheet" href="styles/register.css">
+  <link rel="icon" href="/static/assets/logo.svg" type="image/svg+xml">
+  <link rel="stylesheet" href="/static/styles/base.css">
+  <link rel="stylesheet" href="/static/styles/ui/input.css">
+  <link rel="stylesheet" href="/static/styles/ui/form.css">
+  <link rel="stylesheet" href="/static/styles/ui/button.css">
+  <link rel="stylesheet" href="/static/styles/register.css">
 </head>
 <body>
   <main class="register">
@@ -59,6 +59,6 @@
     <div class="register__right"></div>
   </main>
 
-  <script src="scripts/register.js"></script>
+  <script src="/static/scripts/register.js"></script>
 </body>
 </html>
