feat: add form features to login

--- a/pages/login.html
+++ b/pages/login.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="/static/styles/ui/form.css">
   <link rel="stylesheet" href="/static/styles/ui/button.css">
   <link rel="stylesheet" href="/static/styles/login.css">
+  <link rel="stylesheet" href="/static/styles/ui/animations.css">
 </head>
 <body>
   <div class="logo">
