feat: add data fetching to home

--- a/pages/index.html
+++ b/pages/index.html
@@ -58,58 +58,8 @@
         Events Closing Soon
       </h2>
 
-      <ul class="scrollable-section__list">
-        <li class="scrollable-section__item">
-          <div class="card event-card">
-            <div class="card__title">Evento</div>
-            <div class="card__description">Bla Bla Bla</div>
-
-            <div class="event-card__info">
-              <div class="event-card__info-text">R$ 20.00</div>
-              <div class="event-card__separator"></div>
-              <div class="event-card__info-text">20.000 bets</div>
-            </div>
-          </div>
-        </li>
-
-        <li class="scrollable-section__item">
-          <div class="card event-card">
-            <div class="card__title">Evento</div>
-            <div class="card__description">Bla Bla Bla</div>
-
-            <div class="event-card__info">
-              <div class="event-card__info-text">R$ 20.00</div>
-              <div class="event-card__separator"></div>
-              <div class="event-card__info-text">20.000 bets</div>
-            </div>
-          </div>
-        </li>
-
-        <li class="scrollable-section__item">
-          <div class="card event-card">
-            <div class="card__title">Evento</div>
-            <div class="card__description">Bla Bla Bla</div>
-
-            <div class="event-card__info">
-              <div class="event-card__info-text">R$ 20.00</div>
-              <div class="event-card__separator"></div>
-              <div class="event-card__info-text">20.000 bets</div>
-            </div>
-          </div>
-        </li>
-
-        <li class="scrollable-section__item">
-          <div class="card event-card">
-            <div class="card__title">Evento</div>
-            <div class="card__description">Bla Bla Bla</div>
-
-            <div class="event-card__info">
-              <div class="event-card__info-text">R$ 20.00</div>
-              <div class="event-card__separator"></div>
-              <div class="event-card__info-text">20.000 bets</div>
-            </div>
-          </div>
-        </li>
+      <ul id="events-closing-soon" class="scrollable-section__list">
+        <!-- This is populated via JavaScript -->
       </ul>
     </section>
 
@@ -118,58 +68,8 @@
         Most Bet Events
       </h2>
 
-      <ul class="scrollable-section__list">
-        <li class="scrollable-section__item">
-          <div class="card event-card">
-            <div class="card__title">Evento</div>
-            <div class="card__description">Bla Bla Bla</div>
-
-            <div class="event-card__info">
-              <div class="event-card__info-text">R$ 20.00</div>
-              <div class="event-card__separator"></div>
-              <div class="event-card__info-text">20.000 bets</div>
-            </div>
-          </div>
-        </li>
-
-        <li class="scrollable-section__item">
-          <div class="card event-card">
-            <div class="card__title">Evento</div>
-            <div class="card__description">Bla Bla Bla</div>
-
-            <div class="event-card__info">
-              <div class="event-card__info-text">R$ 20.00</div>
-              <div class="event-card__separator"></div>
-              <div class="event-card__info-text">20.000 bets</div>
-            </div>
-          </div>
-        </li>
-
-        <li class="scrollable-section__item">
-          <div class="card event-card">
-            <div class="card__title">Evento</div>
-            <div class="card__description">Bla Bla Bla</div>
-
-            <div class="event-card__info">
-              <div class="event-card__info-text">R$ 20.00</div>
-              <div class="event-card__separator"></div>
-              <div class="event-card__info-text">20.000 bets</div>
-            </div>
-          </div>
-        </li>
-
-        <li class="scrollable-section__item">
-          <div class="card event-card">
-            <div class="card__title">Evento</div>
-            <div class="card__description">Bla Bla Bla</div>
-
-            <div class="event-card__info">
-              <div class="event-card__info-text">R$ 20.00</div>
-              <div class="event-card__separator"></div>
-              <div class="event-card__info-text">20.000 bets</div>
-            </div>
-          </div>
-        </li>
+      <ul id="most-bet-events" class="scrollable-section__list">
+        <!-- This is populated via JavaScript -->
       </ul>
     </section>
 
@@ -208,6 +108,7 @@
     </section>
   </main>
 
+  <script src="/static//scripts/home.js" type="module"></script>
   <script src="https://unpkg.com/lucide@latest"></script>
   <script>lucide.createIcons()</script>
 </body>
