--- a/pages/wallet.html
+++ b/pages/wallet.html
@@ -49,7 +49,9 @@
         </div>
 
         <div class="card__content">
-          <div class="value">R$ 16.00</div>
+          <div id="balance" class="value">
+            <!-- This will be populated via JavaScript -->
+          </div>
           
           <div class="wallet-actions">
             <button class="button button--sm">Deposit</button>
@@ -68,7 +70,9 @@
         </div>
 
         <div class="card__content card__content--wallet">
-          <div class="value">84</div>
+          <div id="bet-count" class="value">
+            <!-- This is populated via JavaScript -->
+          </div>
 
           <a href="/events">
             <button class="button button--sm">Find more events</button>
@@ -89,18 +93,15 @@
               <th class="table__head">Date</th>
             </tr>
           </thead>
-          <tbody class="table__body">
-            <tr class="table__row">
-              <td class="table__cell">Bet</td>
-              <td class="table__cell">R$ 120</td>
-              <td class="table__cell">1 de Janeiro de 2024</td>
-            </tr>
+          <tbody id="history" class="table__body">
+            <!-- This will be populated via JavaScript -->
           </tbody>
         </table>
       </div>      
     </section>
   </main>
 
+  <script src="/static/scripts/wallet.js" type="module"></script>
   <script src="https://unpkg.com/lucide@latest"></script>
   <script>lucide.createIcons()</script>
 </body>
