feat: add deposit and withdraw and session refreshing

--- a/pages/wallet.html
+++ b/pages/wallet.html
@@ -54,8 +54,19 @@
           </div>
           
           <div class="wallet-actions">
-            <button class="button button--sm">Deposit</button>
-            <button class="button button--sm">Withdraw</button>
+            <button 
+              id="deposit-button"
+              class="button button--sm"
+            >
+              Deposit
+            </button>
+
+            <button 
+              id="withdraw-button"
+              class="button button--sm"
+            >
+              Withdraw
+            </button>
           </div>
         </div>
       </div>
