feat: make home search redirect to events page

--- a/pages/index.html
+++ b/pages/index.html
@@ -38,9 +38,10 @@
   <main class="home">
     <h1 class="home__title">Hi Traveller!</h1>
 
-    <form class="search">
+    <form id="search-form" class="search">
       <div class="search__inner">
         <input
+          id="search-input"
           class="input search__input"
           type="text"
           placeholder="Search for events..."
