feat: add mutations to event page

--- a/pages/event.html
+++ b/pages/event.html
@@ -63,8 +63,8 @@
     </p>
 
     <div class="event__betting-options">
-      <button class="button">This event will happen</button>
-      <button class="button">This event won't happen</button>
+      <button id="will-happen" class="button">This event will happen</button>
+      <button id="wont-happen" class="button">This event won't happen</button>
     </div>
   </main>
 
