feat: make site logo a link

--- a/pages/login.html
+++ b/pages/login.html
@@ -14,10 +14,12 @@
   <link rel="stylesheet" href="/static/styles/ui/animations.css">
 </head>
 <body>
-  <div class="logo">
-    <img aria-describedby="logo-text" src="/static/assets/logo.svg" />
-    <span id="logo-text" class="logo__text">SerasaBet</span>
-  </div>
+  <a href="/">
+    <div class="logo">
+      <img aria-describedby="logo-text" src="/static/assets/logo.svg" />
+      <span id="logo-text" class="logo__text">SerasaBet</span>
+    </div>
+  </a>
 
   <main class="login">
     <div class="login__info">
