--- a/pages/event.html
+++ b/pages/event.html
@@ -11,11 +11,13 @@
 </head>
 <body>
   <header class="header">
-    <div class="logo">
-      <img aria-describedby="logo-text" src="/static/assets/logo.svg" />
-      <span id="logo-text" class="logo__text">SerasaBet</span>
-    </div>
-
+    <a href="/">
+      <div class="logo">
+        <img aria-describedby="logo-text" src="/static/assets/logo.svg" />
+        <span id="logo-text" class="logo__text">SerasaBet</span>
+      </div>
+    </a>
+    
     <div class="header__left">
       <a href="/events/create">
         <button class="button button--outline items-center button--sm">
