fix: remove static content from event page

--- a/pages/event.html
+++ b/pages/event.html
@@ -35,33 +35,45 @@
   </header>
 
   <main class="event">
-    <h1 id="event-title" class="event__title">Your school will explode</h1>
+    <h1 id="event-title" class="event__title">
+      <!-- This will be populated via JavaScript  -->
+    </h1>
 
     <div class="event__info">
       <div class="event__row">
         <span class="event__data">
-          Should happen <span id="date">at January 1, 2025</span>
+          Should happen 
+          <span id="date">
+            <!-- This will be populated via JavaScript  -->
+          </span>
         </span>
 
         <div class="event__separator"></div>
 
         <span class="event__data">
-          R$ <span id="odds-value">20.00</span> per odd
+          R$ 
+          <span id="odds-value">
+            <!-- This will be populated via JavaScript  -->
+          </span>
+          per odd
         </span>
       </div>
 
       <div class="event__row">
         <span class="event__data">
           Betting period between 
-          <span id="betting-start-date">1 December 2024</span> and 
-          <span id="betting-end-date">31 December 2024</span>
+          <span id="betting-start-date">
+            <!-- This will be populated via JavaScript  -->
+          </span> and 
+          <span id="betting-end-date">
+            <!-- This will be populated via JavaScript  -->
+          </span>
         </span>
       </div>
     </div>
 
     <p id="event-description" class="event__description">
-      Just for luck, but there's a reason: They gave us a really cool web
-      development homework!
+      <!-- This will be populated via JavaScript  -->
     </p>
 
     <div class="event__betting-options">
