fix: let's see...

--- a/pages/events.html
+++ b/pages/events.html
@@ -37,9 +37,10 @@
   </header>
 
   <main class="events">
-    <form class="search">
+    <form id="search-form" class="search">
       <div class="search__inner">
         <input
+          id="search-input"
           class="input search__input"
           type="text"
           placeholder="Search for events..."
@@ -133,6 +134,7 @@
     </ul>
   </main>
 
+  <script src="/static/scripts/events.js"></script>
   <script src="https://unpkg.com/lucide@latest"></script>
   <script>lucide.createIcons()</script>
 </body>
