--- a/pages/events.html
+++ b/pages/events.html
@@ -53,84 +53,8 @@
       </div>
     </form>
 
-    <ul class="event-grid">
-      <li>
-        <div class="card event-card">
-          <div class="card__title">Evento</div>
-          <div class="card__description">Bla Bla Bla</div>
-
-          <div class="event-card__info">
-            <div class="event-card__info-text">R$ 20.00</div>
-            <div class="event-card__separator"></div>
-            <div class="event-card__info-text">20.000 bets</div>
-          </div>
-        </div>
-      </li>
-
-      <li>
-        <div class="card event-card">
-          <div class="card__title">Evento</div>
-          <div class="card__description">Bla Bla Bla</div>
-
-          <div class="event-card__info">
-            <div class="event-card__info-text">R$ 20.00</div>
-            <div class="event-card__separator"></div>
-            <div class="event-card__info-text">20.000 bets</div>
-          </div>
-        </div>
-      </li>
-
-      <li>
-        <div class="card event-card">
-          <div class="card__title">Evento</div>
-          <div class="card__description">Bla Bla Bla</div>
-
-          <div class="event-card__info">
-            <div class="event-card__info-text">R$ 20.00</div>
-            <div class="event-card__separator"></div>
-            <div class="event-card__info-text">20.000 bets</div>
-          </div>
-        </div>
-      </li>
-
-      <li>
-        <div class="card event-card">
-          <div class="card__title">Evento</div>
-          <div class="card__description">Bla Bla Bla</div>
-
-          <div class="event-card__info">
-            <div class="event-card__info-text">R$ 20.00</div>
-            <div class="event-card__separator"></div>
-            <div class="event-card__info-text">20.000 bets</div>
-          </div>
-        </div>
-      </li>
-
-      <li>
-        <div class="card event-card">
-          <div class="card__title">Evento</div>
-          <div class="card__description">Bla Bla Bla</div>
-
-          <div class="event-card__info">
-            <div class="event-card__info-text">R$ 20.00</div>
-            <div class="event-card__separator"></div>
-            <div class="event-card__info-text">20.000 bets</div>
-          </div>
-        </div>
-      </li>
-
-      <li>
-        <div class="card event-card">
-          <div class="card__title">Evento</div>
-          <div class="card__description">Bla Bla Bla</div>
-
-          <div class="event-card__info">
-            <div class="event-card__info-text">R$ 20.00</div>
-            <div class="event-card__separator"></div>
-            <div class="event-card__info-text">20.000 bets</div>
-          </div>
-        </div>
-      </li>
+    <ul id="event-list" class="event-grid">
+      <!-- This will be populated via JavaScript -->
     </ul>
   </main>
 
