fix: fix minor issues

--- a/pages/event.html
+++ b/pages/event.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Serasa Bet | Your school will explode</title>
+  <title>Serasa Bet | Evento</title>
   <link rel="stylesheet" href="/static/styles/base.css">
   <link rel="stylesheet" href="/static/styles/event.css">
   <link rel="stylesheet" href="/static/styles/layout/header.css">
@@ -42,7 +42,7 @@
     <div class="event__info">
       <div class="event__row">
         <span class="event__data">
-          Should happen 
+          deveria acontecer em 
           <span id="date">
             <!-- This will be populated via JavaScript  -->
           </span>
@@ -55,16 +55,16 @@
           <span id="odds-value">
             <!-- This will be populated via JavaScript  -->
           </span>
-          per odd
+          por cota
         </span>
       </div>
 
       <div class="event__row">
         <span class="event__data">
-          Betting period between 
+          Período de apostas entre  
           <span id="betting-start-date">
             <!-- This will be populated via JavaScript  -->
-          </span> and 
+          </span> e 
           <span id="betting-end-date">
             <!-- This will be populated via JavaScript  -->
           </span>
@@ -77,8 +77,8 @@
     </p>
 
     <div class="event__betting-options">
-      <button id="will-happen" class="button">This event will happen</button>
-      <button id="wont-happen" class="button">This event won't happen</button>
+      <button id="will-happen" class="button">Esse evento vai acontecer</button>
+      <button id="wont-happen" class="button">Esse evento não vai acontecer</button>
     </div>
   </main>
 
