--- a/pages/login.html
+++ b/pages/login.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login | SerasaBet</title>
+  <title>SerasaBet | Login</title>
   <meta name="description" content="Meet SerasaBet and have some fun betting on random events.">
   <link rel="icon" href="/static/assets/logo.svg" type="image/svg+xml">
   <link rel="stylesheet" href="/static/styles/base.css">
@@ -23,11 +23,11 @@
 
   <main class="login">
     <div class="login__info">
-      <h1 class="login__title">Login to SerasaBet.</h1>
+      <h1 class="login__title">Entre na sua Conta</h1>
 
       <h2 class="login__subtitle">
-        Turn Predictions into Wins. Dive into the thrill of creating and betting
-        on your favorite events.
+        Transforme Previsões em Ganhos. Mergulhe na emoção de criar e apostar
+        nos seus eventos favoritos.
       </h2>
     </div>
 
@@ -39,17 +39,17 @@
       </div>
 
       <div class="form__item">
-        <label for="password">Password</label>
+        <label for="password">Senha</label>
         <input id="password" class="input">
         <p class="form__message"></p>
       </div>
 
       <button class="button">
-        Login
+        Entrar
       </button>
 
       <p class="login__register-link">
-        Is it your first time here? <a href="/register">Create your account</a>.
+        Primeira vez aqui? <a href="/register">Crie sua conta</a>.
       </p>
     </form>
   </main>
