feat: add deposit and withdraw modals

--- a/pages/events/create.html
+++ b/pages/events/create.html
@@ -54,8 +54,8 @@
       </div>
       
       <div class="form__item">
-        <label class="label" for="odds-value">Valor da cota</label>
-        <input class="input" id="odds-value" min="0" value="0" step="any">
+        <label class="label" for="odds-value">Valor da cota (em R$)</label>
+        <input type="number" class="input" id="odds-value" min="0" value="0" step="any">
         <p class="form__message"></p>
       </div>
 
