--- a/pages/wallet.html
+++ b/pages/wallet.html
@@ -11,6 +11,10 @@
   <link rel="stylesheet" href="/static/styles/ui/table.css">
   <link rel="stylesheet" href="/static/styles/wallet.css">
   <link rel="stylesheet" href="/static/styles/ui/button.css">
+  <link rel="stylesheet" href="/static/styles/ui/modal.css">
+  <link rel="stylesheet" href="/static/styles/ui/input.css">
+  <link rel="stylesheet" href="/static/styles/ui/label.css">
+  <link rel="stylesheet" href="/static/styles/ui/form.css">
 </head>
 <body>
   <header class="header">
@@ -56,7 +60,8 @@
           </div>
           
           <div class="wallet-actions">
-            <button 
+            <button
+              data-custom-open="withdraw-modal"
               id="deposit-button"
               class="button button--sm"
             >
@@ -114,7 +119,78 @@
     </section>
   </main>
 
+  <div class="modal micromodal-slide" id="withdraw-modal" aria-hidden="true">
+    <div class="modal__overlay" tabindex="-1" data-micromodal-close>
+      <div class="modal__container" role="dialog" aria-modal="true" aria-labelledby="withdraw-modal-title">
+        <div class="modal__header">
+          <h2 class="modal__title" id="withdraw-modal-title">
+            Sacar
+          </h2>
+          <button class="modal__close" aria-label="Close modal" data-micromodal-close></button>
+        </div>
+        <form class="modal__content" id="withdraw-form">
+          <div class="form">
+            <div class="form__item">
+              <label class="label" for="withdraw-amount">Valor (em R$)</label>
+              <input class="input" type="number" id="withdraw-amount" min="0" value="0" step="any">
+            </div>
+
+            <div class="form__item">
+              <label for="pix-key" class="label">Sua chave PIX</label>
+              <input class="input" id="pix-key">
+            </div>
+          </div>
+
+          <footer class="modal__footer">
+            <button class="button">Sacar</button>
+          </footer>
+        </form>
+      </div>
+    </div>
+  </div>
+
+  <div class="modal micromodal-slide" id="deposit-modal" aria-hidden="true">
+    <div class="modal__overlay" tabindex="-1" data-micromodal-close>
+      <div class="modal__container" role="dialog" aria-modal="true" aria-labelledby="deposit-modal-title">
+        <div class="modal__header">
+          <h2 class="modal__title" id="deposit-modal-title">
+            Depositar
+          </h2>
+          <button class="modal__close" aria-label="Close modal" data-micromodal-close></button>
+        </div>
+        <form class="modal__content" id="deposit-form">
+          <div class="form">
+            <div class="form__item">
+              <label class="label" for="deposit-amount">Valor (em R$)</label>
+              <input class="input" type="number" id="deposit-amount" min="0" value="0" step="any">
+            </div>
+
+            <div class="form__item">
+              <label for="pix-key" class="label">Nome de seu Cartão</label>
+              <input class="input" id="pix-key">
+            </div>
+
+            <div class="form__item">
+              <label for="pix-key" class="label">Número de seu Cartão</label>
+              <input class="input" id="pix-key">
+            </div>
+
+            <div class="form__item">
+              <label for="pix-key" class="label">CVV</label>
+              <input class="input" id="pix-key">
+            </div>
+          </div>
+
+          <footer class="modal__footer">
+            <button class="button">Depositar</button>
+          </footer>
+        </form>
+      </div>
+    </div>
+  </div>
+
   <script src="/static/scripts/wallet.js" type="module"></script>
+  <script src="https://unpkg.com/micromodal/dist/micromodal.min.js"></script>
   <script src="https://unpkg.com/lucide@latest"></script>
   <script>lucide.createIcons()</script>
 </body>
